dev/test_programs/INVALID/group1/stmt9.go
package 4;

func main(){

}
